--- a/src/main/webapp/view/config.xhtml
+++ b/src/main/webapp/view/config.xhtml
@@ -189,6 +189,45 @@
 				  </div>
 				</div>
 
+				<!-- Insert New Company -->
+                <div class="col-lg-6">
+				  <div class="panel panel-black">
+				    <div class="panel-heading">
+				      <h4 class="panel-title">
+				        <a data-toggle="collapse" href="#collapseAddCN" class="panel-title">
+				          <h:outputText value="#{msg['app.config.company.new.title']}"/>
+				        </a>
+				      </h4>
+				    </div>
+				    <div id="collapseAddCN" class="panel-collapse collapse out">
+				      <div class="panel-body">
+				      	<p:outputPanel id="cgAddNegotiationContent" deferred="true">
+					      	<h:panelGrid columns="3" cellspacing="5">
+						        <p:outputLabel value="#{msg['app.config.company.new.ticker']}:" for="newCompanyTicker" />
+						        <p:inputText id="newCompanyTicker" value="#{configView.company.ticker}" />
+						        <p:spacer/>
+
+						        <p:outputLabel value="#{msg['app.config.company.new.name']}:" for="newCompanyName" />
+						        <p:inputText id="newCompanyName" value="#{configView.company.name}" />
+						        <p:spacer/>
+
+						        <p:outputLabel value="#{msg['app.config.company.new.fullname']}:" for="newCompanyFullName" />
+						        <p:inputText id="newCompanyFullName" value="#{configView.company.fullName}" />
+						        <p:spacer/>
+
+						        <p:outputLabel value="#{msg['app.config.company.new.setor']}:" for="newCompanySetor" />
+						        <p:inputText id="newCompanySetor" value="#{configView.company.setor}" />
+						        <p:outputLabel value="#{msg['app.config.company.new.setores']}"/>
+
+								<p:commandButton value="#{msg['btn.add']}" actionListener="#{configView.addNegotiationCode}" update=":form:cgAddNegotiationContent"/>
+					      	</h:panelGrid>
+
+				      	</p:outputPanel>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+
 				<!-- User Config -->
                 <div class="col-lg-12">
 				  <div class="panel panel-primary">
